--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1 class="text-center my-5 titulo">Administrador de Pacientes de Veterinaria</h1>
+    <h1 data-cy="titulo-proyecto" class="text-center my-5 titulo">Administrador de Pacientes de Veterinaria</h1>
     <div class="container mt-5 p-5">
         <div id="contenido" class="row">
             <div class="col-md-6 agregar-cita">
-                <form id="nueva-cita">
+                <form data-cy="formulario" id="nueva-cita">
                     <legend class="mb-4">Datos del Paciente</legend>
                     <div class="form-group row">
                         <label class="col-sm-4 col-lg-4 col-form-label">Nombre Mascota:</label>
@@ -59,7 +59,7 @@
                 </form>
             </div>
             <div class="col-md-6">
-                <h2 id="administra" class="mb-4"></h2>
+                <h2 data-cy="citas-heading" id="administra" class="mb-4"></h2>
                 <ul id="citas" class="list-group lista-citas"></ul>
             </div>
         </div> <!--.row-->
